# python-project-50

./: .coverage  .flake8  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  requirements.txt  setup.py  sonar-project.properties  sss.py  uv.yml
.github/workflows/: build.yml  python-ci.yml
gendiff/formatters/: __init__.py  formatters.py  json_format.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py  parsers.py
hatch-env/: pyvenv.cfg
src/: gendiff.py
src/hexlet_code/: __init__.py  formatters.py  gendiff.py  parsers.py
src/hexlet_code.egg-info/: SOURCES.txt
tests/: test_10_diff.py  test_compare_json.py
tests/test_data/: expected_output_json.txt  file2.json  file2.yml
